2006-11-12  Steve Frécinaux  <code@istique.net>

	* plugins/externaltools/tools/__init__.py: split ToolsPlugin into
	ExternalToolsPlugin and ExternalToolsWindowHelper.

	* plugins/externaltools/tools/functions.py: adapt for above changes.

2006-11-12  Steve Frécinaux  <code@istique.net>

	* plugins/externaltools/tools/__init__.py:
	* plugins/externaltools/tools/capture.py:
	* plugins/externaltools/tools/functions.py:
	* plugins/externaltools/tools/manager.py:
	* plugins/externaltools/tools/outputpanel.py:
	* plugins/modelines/modelines.py:

	Convert source code from tabs to spaces, to follow PEP8 more closely.

2006-11-08  Steve Frécinaux  <code@istique.net>

	* gedit/gedit.c:
	* gedit/gedit-document.c
	* gedit/gedit-plugins-manager.h:
	
	Remove useless includes.

2006-11-07  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-io-error-message-area.c: fix incorrect grammar in
	error messages (Bug #355965). Patch by Mark Drago.

2006-11-05  Paolo Maggi  <paolo@gnome.org>

	Fixes bug #367610 – Python console doesn't allow different code blocks
	
	Patch by Brian McKenna  <puffnfresh@gmail.com>

	* plugins/pythonconsole/pythonconsole/console.py: allow the python 
	console to handle blocks

2006-11-05  Paolo Maggi  <paolo@gnome.org>

	Fixed bug #354428 - gedit should use accessories-text-editor icon in 
	places of the text-editor one.
	
	Patch by Michael Monreal  <infernux@web.de>
	
	* data/gedit.desktop.in.in: use the new icon naming scheme

	* gedit/gedit.c (main): ditto

2006-11-05  Joachim Noreiko  <jnoreiko@yahoo.com>

 * plugins/externaltools/tools/stock-tools.xml: fixing a few mistakes 
   in the status bar descriptions of the stock External Tools. Bug 352950.

=== gedit 2.16.2 ===

2006-10-29  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	gedit 2.16.2 released.

2006-10-19  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-spinner.[ch]: sync to latest ephy code.

2006-10-14  Jesse van den Kieboom  <jesse@icecrew.nl>
