@@ -1,3 +1,8 @@
+2006-11-12  Jesse van den Kieboom  <jesse@icecrew.nl>
+
+	* plugins/filebrowser/gedit-file-bookmarks-store.c: fix not checking
+	existence for remote bookmarks (patch by Bruno Boaventura)
+
 2006-11-12  Steve Frécinaux  <code@istique.net>
 
 	* plugins/externaltools/tools/__init__.py: split ToolsPlugin into
